# kaiten-cli

./: .gitignore  AGENTS.md  API_BEHAVIOR_MATRIX.md  ARCHITECTURE.md  COMMAND_REFERENCE.md  LIVE_VALIDATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/archive/: PARITY_CHECKLIST.md  PLAN.md  PLAN_EXTERNAL_REVIEW.md  PLAN_TRIZ_VERIFICATION.md  README.md
scripts/: benchmark_reference_workflows.py  generate_reference_docs.py
skills/kaiten-cli-heavy-data/: SKILL.md
skills/kaiten-cli-metrics/: SKILL.md
src/kaiten_cli/: __init__.py  __main__.py  app.py  audit_support.py  cards_support.py  client.py  discovery.py  errors.py  executor.py  input.py  live_contracts.py  models.py  output.py  profiles.py  project_support.py  runtime_behaviors.py  transforms.py
src/kaiten_cli/registry/: __init__.py  audit_and_analytics.py  automations.py  base.py  blockers.py  boards.py  card_relations.py  card_types.py  cards.py  charts.py  checklists.py  columns.py  comments.py  custom_properties.py  documents.py  external_links.py  files.py  lanes.py  live_contracts.py  members.py  projects.py  query.py  roles_and_groups.py  service_desk.py  snapshot.py  spaces.py  subscribers.py  tags.py  time_logs.py  tree.py  utilities.py  webhooks.py
src/kaiten_cli/runtime/: __init__.py  behaviors.py  cache.py  client.py  executor.py  input.py  snapshots.py  trace.py
src/kaiten_cli/runtime/support/: __init__.py  audit.py  batch.py  cards.py  documents.py  projects.py  relations.py  spaces.py  time_logs.py  tree.py
tests/: conftest.py  test_audit_and_analytics.py  test_card_types_and_custom_properties.py  test_charts.py  test_cli_smoke.py  test_command_resolution.py  test_completion_tail.py  test_discovery.py  test_docs_structure.py  test_documents_and_tree.py  test_domain_expansion.py  test_entrypoints.py  test_executor_architecture.py  test_executor_http.py  test_generated_docs.py  test_input_parsing.py  test_investigation_workflows.py  test_live_contracts.py  test_local_snapshots.py  test_narrow_list_fields.py  test_output_human.py  test_output_json.py  test_profiles.py  test_rate_limit_policy.py  test_registry_examples.py  test_roles_groups_and_subscribers.py  test_runtime_cache.py  test_service_desk.py  test_skills_structure.py  test_timeout_policy.py  test_transforms.py  test_utilities_remainder.py  test_webhooks_and_automations.py
tests/data/: mcp_aliases.txt
tests/live/: conftest.py  test_automation_contract.py  test_sandbox_live_full.py  test_sandbox_smoke.py
